2000-09-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/style.c (ProcessNewStyle):
	(lookup_style):
	* fvwm/gnome.c (GNOME_GetHints):
	(GNOME_ProcessClientMessage):
	(GNOME_HandlePropRequest):
	implemented and documented GNOMEIgnoreHints and GNOMEUseHints styles

	* fvwm/gnome.c (GNOME_GetHintIcons):
	(GNOME_GetHintLayer):
	(GNOME_GetHintState):
	(GNOME_GetHintAppState):
	(GNOME_GetHintDesktop):
	(GNOME_GetHint):
	(GNOME_GetExpandedSize):
	made static

	* fvwm/fvwm2.1:
	fixed typo

	* fvwm/style.h:
	* fvwm/window_flags.h (DO_IGNORE_GNOME_HINTS):
	* fvwm/fvwm.h (struct):
	new window flag do_ignore_gnome_hints

2000-09-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_HandlePropRequest):
	removed debug messages

	* libs/GetFont.c (GetFontSetOrFixed):
	* libs/fvwmlib.h:
	function is only compiled in with I18N_MB defined

2000-09-08  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/modconf.c (AddToModList, ModuleConfig, DestroyModConfig):
	* fvwm/fvwm2.1:
	Fixed synchronous sending of new syntax config commands.
	DestroyModuleConfig now supports a non conflicting syntax too,
	no globing in alias is allowed. DestroyModuleConfig FvwmPager: Geomet*

2000-09-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (raise_over_unmanaged):
	fixed bug in raising of transients which resulted in only the first
	transient to be raised with FvwmAuto when the transient paren was
	entered

	* fvwm/borders.c (SetupTitleBar):
	fixes drawing of title buttons in windows with very low width

	* fvwm/events.c (HandleButtonPress):
	fixed redundant raising of non focused ClickToFocus +
	ClickToFocusRaisesOff windows when clicking on the decorations.

2000-09-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	* fvwm/events.c (HandleButtonPress):
	(HandleFocusIn):
	Fixed at least one problem that caused focus loss of xview windows when
	a normal ClickToFocus is entered.

	* fvwm/window_flags.h (IS_SCHEDULED_FOR_RAISE):