@@ -1,3 +1,13 @@
+2000-09-15  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* configure.in:
+	* libs/strdup.c:
+	new file with configure support for strdup needed for ULTRIX
+
+	* libs/Makefile.in (libfvwm_a_SOURCES):
+	* libs/GetFontSet.c:
+	removed file libs/GetFontSet.c
+
 2000-09-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/fvwm2.1:
